Updated settings needed for EB deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==6.0.1
 django-filter==25.2
 djangorestframework==3.16.1
 drf-yasg==1.21.14
+gunicorn==24.1.1
 httpie==3.2.4
 idna==3.11
 importlib_resources==6.5.2
@@ -21,6 +22,7 @@ packaging==26.0
 pyaml==25.7.0
 Pygments==2.19.2
 PySocks==1.7.1
+python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
