--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,6 +1,8 @@
 option_settings:
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: tutorial.settings
   aws:elasticbeanstalk:container:python:
-    WSGIPath: locallibrary.wsgi:application
+    WSGIPath: tutorial.wsgi:application
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: staticfiles
 
