--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ markdown-it-py==4.0.0
 mdurl==0.1.2
 multidict==6.7.0
 packaging==26.0
+psycopg2-binary==2.9.11
 pyaml==25.7.0
 Pygments==2.19.2
 PySocks==1.7.1
