--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -8,7 +8,7 @@ option_settings:
 
 container_commands:
   01_migrate:
-    command: "source /var/app/venv/staging-LQM1lest/bin/activate && python3 manage.py migrate"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
     leader_only: true
   02_collectstatic:
-    command: "source /var/app/venv/staging-LQM1lest/bin/activate && python3 manage.py collectstatic --noinput"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
